# orangutan-code

./: .gitignore  pyproject.toml
docs/: architecture.md  ask-tool.md  ollama-options.md  philosophy.md  setup.md
orangutan/: __init__.py  ask_tool.py  cli.py  config.py  context.py  ollama_client.py  report.py  system_prompt.py  tools.py
