[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orangutan-code"
version = "0.1.0"
description = "AI-powered coding assistant using local LLMs via Ollama"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0",
    "click>=8.1.0",
    "questionary>=2.0.0",
]

[project.scripts]
orangutan = "orangutan.cli:main"

[tool.setuptools.packages.find]
include = ["orangutan*"]
